# wm_csv_report

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  math.csv  physics.csv  programming.csv  pyproject.toml  requirements.txt
app/: cli.py  reader.py
app/reports/: __init__.py  base.py  median_report.py
tests/: test_cli.py  test_median_report.py  test_reader.py
