[tool.poetry]
name = "wm-csv-report"
version = "0.1.0"
description = "CLI для отчета о потреблении кофе"
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
tabulate = ">=0.10.0,<0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
pre-commit = "^4.5.1"

[tool.poetry.scripts]
coffee-report = "app.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
